# myblog.rs

./: README.md
blogpost_web/: Cargo.toml  Dockerfile
blogpost_web/database/: app.db-shm  app.db-wal
blogpost_web/src/: db_client.rs  main.rs  repository.rs
blogpost_web/src/db_client/: sqlite_db.rs
blogpost_web/src/dto/: post_dto.rs
blogpost_web/src/handler/: post_handler.rs
blogpost_web/src/models/: post.rs
blogpost_web/src/query/: db_init.sql
blogpost_web/src/repository/: post_repository.rs
blogpost_web/src/service/: post_service.rs
blogpost_web/src/traits/: db_client.rs
blogpost_web/static/client/: home.html
blogpost_web/static/client/resources/css/: home.css
blogpost_web/static/client/resources/js/: avatar_input.js  form_submit.js  image_input.js  load_posts.js
